add content to chapter 5

--- a/files/5-基本语法.md
+++ b/files/5-基本语法.md
@@ -1,14 +1,87 @@
-## Python3 - 基本语法
+## 第5章  -  基本语法
 
 Python 语言和 Perl语言、C语言以及Java语言有很多相似之处。同时，他们之间也有很多区别。
 
-### 第一个 Python 程序
+### 5.1 第一个 Python 程序
 
 下面我们将使用不同的编程模式来执行 Python 程序。
 
 #### 交互模式编程（Interactive Mode Programming）
 
+在命令行中直接运行 Python 解释器可以进入 python 的交互模式:
+
+```bash
+$ python3
+Python 3.6.5 (default, Apr  1 2018, 05:46:30)
+[GCC 7.3.0] on linux
+Type "help", "copyright", "credits" or "license" for more information.
+>>>
+```
+
+然后用户输入什么，它就解释执行什么， 如打印一句话：
+
+```python
+>>> print('Python3 Tutorial')
+Python3 Tutorial
+>>>
+```
+
+*注：如果是 Python2 的话，`print` 后面的`()`是可以省略的。*
+
+交互式编程非常方面，有时候我们想做一些小的处理或者做一些小的验证的时候，直接就可以打开一个 python 进行验证，非常便捷。例如，我想快速知道整数 `1234` 的十六进制是多少，那么使用 python 就一句话：
+
+```python
+>>> print(hex(1234))
+0x4d2
+>>>
+```
+
+在日常中，python是一个非常好用的工具，要多去使用它，会有意想不到的效率提升。
+
 #### 脚本模式编程（Script Mode Programming）
+
+与交互式编程对应的是脚本式编程， python 允许我们将 python 代码编写到一个以`.py`结尾的文件中，然后将这个文件作为 python 的参数就可以直接执行。
+
+例如：将下面的内容写道 `test.py` 中保存:
+
+```python
+print('Python3 Tutorial')
+```
+
+然后使用脚本模式执行：
+```python
+$ python3 test.py
+Python3 Tutorial
+```
+### 5.2 Python 标识符（Python Identifiers）
+
+Python 标识符用来定义 Python 中的变量(variable)、函数(function)、类(class)、模块(module)以及其他的对象(object)， Python 中的标识符由只能字母（`A-Z`, `a-z`），下划线(`_`）以及阿拉伯数字(`0-9`)构成，标识符开头必须是字母或者下划线，不能是数字，这个和`C`语言一致。
+
+在python的标识符中只能出现以上几种类型的字符，不能有其他类型的字符如 `@`,`$`,`%`等。并且Python也是大小写敏感的，比如 `Manpower` 和 `manpower`是两个不同的标识符。
+
+下面是 python 标志符的命名约定：
+
+* 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
