--- a/files/5-基本语法.md
+++ b/files/5-基本语法.md
@@ -61,9 +61,27 @@ Python 标识符用来定义 Python 中的变量(variable)、函数(function)、
 
 下面是 python 标志符的命名约定：
 
-* 
+* Class names start with an uppercase letter. All other identifiers start with a lowercase letter.
+* Starting an identifier with a single leading underscore indicates that the identifier is private.
+* Starting an identifier with two leading underscores indicates a strong private identifier.
+* If the identifier also ends with two trailing underscores, the identifier is a language-defined special name. 
 
+### 5.3 保留字(Reserved Words)
 
+python 保留字是 python 内部定义的特殊名称， 不能在程序中使用这些保留字进行命名标识符，所有的保留字都一定是小写字母。下面的表是 python 保留字表：
+
+| and      | exec    | not    |
+| -------- | ------- | ------ |
+| as	   | exec    | not    |
+| assert   | finally | or     |
+| break	   | for     | pass   |
+| class	   | from    | print  |
+| continue | global  | raise  |
+| def      | if      | return |
+| del      | import  | try    |
+| elif     | in	     | while  |
+| else     | is	     | with   |
+| except   | lambda  | yield  |
 
 
 
