modified:   "files/5-\345\237\272\346\234\254\350\257\255\346\263\225.md"

--- a/files/5-基本语法.md
+++ b/files/5-基本语法.md
@@ -70,18 +70,19 @@ Python 标识符用来定义 Python 中的变量(variable)、函数(function)、
 
 python 保留字是 python 内部定义的特殊名称， 不能在程序中使用这些保留字进行命名标识符，所有的保留字都一定是小写字母。下面的表是 python 保留字表：
 
-| and      | exec    | not    |
+|          |         |        |
 | -------- | ------- | ------ |
-| as	   | exec    | not    |
+| as       | exec    | not    |
 | assert   | finally | or     |
-| break	   | for     | pass   |
-| class	   | from    | print  |
+| break    | for     | pass   |
+| class    | from    | print  |
 | continue | global  | raise  |
 | def      | if      | return |
 | del      | import  | try    |
-| elif     | in	     | while  |
-| else     | is	     | with   |
+| elif     | in      | while  |
+| else     | is      | with   |
 | except   | lambda  | yield  |
+| and      |         |        |
 
 
 
